Add social media meta tags (Open Graph + Twitter Card)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Topocopter</title>
+    <meta name="description"
+        content="Vlieg met je helikopter over Nederland en vind alle provinciesteden! Een leuk aardrijkskunde spel voor kinderen.">
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Topocopter - Leer de Steden van Nederland!">
+    <meta property="og:description"
+        content="Vlieg met je helikopter over Nederland en vind alle provinciesteden! Een leuk aardrijkskunde spel voor kinderen.">
+    <meta property="og:image" content="social_poster.jpg">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Topocopter - Leer de Steden van Nederland!">
+    <meta name="twitter:description" content="Vlieg met je helikopter over Nederland en vind alle provinciesteden!">
+    <meta name="twitter:image" content="social_poster.jpg">
+
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <style>
