Add intro video with mute/unmute button to start screen

--- a/index.html
+++ b/index.html
@@ -611,7 +611,13 @@
 
             <!-- Screens -->
             <div id="start-screen" class="overlay">
-                <h1>Topocopter</h1>
+                <!-- Intro Video -->
+                <div style="width: 40vh; height: 40vh; border-radius: 30px; margin-bottom: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); overflow: hidden; position: relative;">
+                    <video id="intro-video" autoplay muted loop playsinline style="position: absolute; top: 0; left: 50%; transform: translateX(-50%); height: 100%; width: auto;">
+                        <source src="intro_video.mp4" type="video/mp4">
+                    </video>
+                    <button id="mute-btn" onclick="toggleMute()" style="position: absolute; bottom: 10px; left: 10px; background: rgba(0,0,0,0.6); border: none; border-radius: 50%; width: 40px; height: 40px; cursor: pointer; font-size: 20px; display: flex; align-items: center; justify-content: center;">🔇</button>
+                </div>
                 <!-- Step 1: Time Selection -->
                 <div id="difficulty-step-1">
                     <p>Kies je snelheid:</p>
@@ -960,6 +966,14 @@
             helicopter.element.style.transform = 'scaleX(1)';
             helicopter.facingRight = false;
             updateHelicopterPosition();
+        }
+
+        // Mute/Unmute toggle for intro video
+        function toggleMute() {
+            const video = document.getElementById('intro-video');
+            const btn = document.getElementById('mute-btn');
+            video.muted = !video.muted;
+            btn.textContent = video.muted ? '🔇' : '🔊';
         }
 
         // Difficulty Configuration
